--- a/module2-solution/index.html
+++ b/module2-solution/index.html
@@ -4,6 +4,7 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link rel="stylesheet" href="./css/style.css">
         <title>Module 2 Coding Assignment</title>
     </head>
 
@@ -12,19 +13,19 @@
             <h1>Our Menu</h1>
         </div>
         <div class="container">
-            <div class="chicken">
+            <div class="item chicken">
                 <h2>chicken</h2>
                 <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Dolorem ratione illo architecto repellat
                     ex, praesentium minima consequatur unde earum blanditiis quae soluta cumque animi, repudiandae
                     sapiente necessitatibus, maxime officia eius.</p>
             </div>
-            <div class="beef">
+            <div class="item beef">
                 <h2>beef</h2>
                 <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Dolorem ratione illo architecto repellat
                     ex, praesentium minima consequatur unde earum blanditiis quae soluta cumque animi, repudiandae
                     sapiente necessitatibus, maxime officia eius.</p>
             </div>
-            <div class="sushi">
+            <div class="item sushi">
                 <h2>sushi</h2>
                 <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Dolorem ratione illo architecto repellat
                     ex, praesentium minima consequatur unde earum blanditiis quae soluta cumque animi, repudiandae
